logs/Slang/generic/typedef/typedef_test_25.sv.log
name: typedef_test_25
description: Test
should_fail: 0
tags: 6.18
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_25.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_25.sv:8:9: error: use of undeclared identifier 'A'
  reg  [A-1:0] addr;
        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_25.sv:9:8: error: use of undeclared identifier 'D'
  reg [D-1:0] data;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_25.sv:11:9: error: use of undeclared identifier 'E'
  reg  [E-1:0] ecc;
        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_25.sv:13:10: error: use of undeclared identifier 'M'
  reg   [M-1:0] mask;
         ^
